templates/plain-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APP_NAME
  namespace: APP_NAMESPACE
spec:
  replicas: 1
  selector:
    matchLabels:
      app: APP_NAME
  template:
    metadata:
      labels:
        app: APP_NAME
    spec:
      containers:
        - name: app
          image: ghcr.io/nginxinc/nginx-unprivileged:stable-alpine
          ports:
            - containerPort: 8080
