templates/plain-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: APP_NAMESPACE
spec:
  selector:
    app: APP_NAME
  ports:
    - name: http
      port: 80
      targetPort: 8080
