templates/plain-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: APP_NAME
  namespace: APP_NAMESPACE
  annotations:
    cert-manager.io/cluster-issuer: lab-ca
spec:
  ingressClassName: nginx
  tls:
    - secretName: APP_NAME-tls
      hosts:
        - APP_HOST.lab.bartos.media
  rules:
    - host: APP_HOST.lab.bartos.media
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: APP_NAME
                port:
                  number: 80
